More link letter spacing

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -277,6 +277,7 @@
 		border-top: 2px solid $color__background-hr-dark;
 		border-bottom: 2px solid $color__background-hr-dark;
 		font-family: $font__details;
+		letter-spacing: 1px; 
 		padding: 10px 0;
 
 		&:hover {
