--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -151,14 +151,14 @@
 						padding-left: 0;
 						width: 150px;
 						border-top: none;
-						border-bottom: 1px solid $color__borders;
+						border-bottom: 1px solid $color__background-hr;
 					}
 
 					td {
 						padding-right: 0;
 						text-align: right;
 						border-top: none;
-						border-bottom: 1px solid $color__borders;
+						border-bottom: 1px solid $color__background-hr;
 					}
 
 					&.shipping {
