--- a/style.css
+++ b/style.css
@@ -1241,11 +1241,14 @@ a {
       background: #626262;
       color: #fff; }
 
+/*--------------------------------------------------------------
+## Jetpack Sharing
+--------------------------------------------------------------*/
 .share-this {
   font-size: 1em; }
 
 .single-post .sharedaddy .sd-content {
-  padding: 30px 0;
+  padding: 1em 0 1.5em;
   text-align: center;
   width: 100%; }
   .single-post .sharedaddy .sd-content ul {
