Related posts styling

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -184,6 +184,7 @@
 --------------------------------------------------------------*/
 .yarpp-related,
 .related-posts-section {
+	padding-bottom: 1.3333em; 
 
 	.related-posts {
 		font-size: 1em;
